fixed word wrap, added hover effects

--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,7 @@
+:root {
+	--primary: #0275d8;
+}
+
 html, body {
 	position: relative;
 	width: 100%;
@@ -48,7 +52,7 @@ input:disabled {
 button {
 	color:white;
 	font-weight: 800;
-	background-color: #0275d8;
+	background-color: var(--primary);
 	font-size: 1rem;
 	border-radius: 5px;
 	outline: none;
